# makefacedata

./: CMakeLists.txt  datamanager.h  facerecognizer.cpp  facerecognizer.h  main.cpp  make_meta_data.py
